welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: Missing closing brace `}' assumed here
def hunt() {
^SlugHunting:13: error: expected class or object definition
def isFacingTrail():Boolean =
^